objects/HealthCloudGA__FilterCondition__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FilterCriterion__c</fullName>
        <label>Filter Criterion</label>
        <referenceTo>HealthCloudGA__FilterCriterion__c</referenceTo>
        <relationshipLabel>Filter Conditions</relationshipLabel>
        <relationshipName>FilterConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectName__c</fullName>
        <label>Object Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RowNumber__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SRowNumber__c</fullName>
        <formula>&apos;#&apos;+ TEXT(HealthCloudGA__RowNumber__c)+&apos;#&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRow Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Filter Condition</label>
    <nameField>
        <label>Filter Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>